--- a/index.html
+++ b/index.html
@@ -7,6 +7,48 @@
     <title>Page Web Personnelle</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">A propos de moi</a></li>
+            <li><a href="#">Passions</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <header>
+        <h1>Bienvenue</h1>
+        <h2>Développeur web et mobile</h2>
+    </header>
+
+    <main>
+        <section>
+            <h2>A propos de moi</h2>
+            <img src="image/me.jpeg" alt="ma photo"/>
+           <div>
+            <p>Je suis actuellement en formation en développeur web et mobile à l'IUT d'Orléans. J'ai développé des applications web et mobile pour des entreprises depuis 2018.</p>
+            <p>Mes passions et compétences actuelles incluent le développement web, le développement mobile, la conception d'interfaces utilisateurs, le marketing digital et la stratégie digitale.</p>
+            <p>Je suis disponible pour vous renseigner sur mes compétences, mes expériences et mes projets.</p>
+            </div>
+           </div>
+        </section>
+
+
+        <section>
+            <h2>Passions</h2> 
+            <ul>
+                <li>Développeur web et mobile depuis 2018</li>
+                <li>Développeur web et mobile depuis 2015</li>
+                <li>Développeur web et mobile depuis 2012</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Contacts</h2>
+            <ul>
+                <li>Téléphone</li>
+                <li>Email </li>
+            </ul>
+        </section>
 </body>
 </html>
