--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <h2>À propos de moi</h2>
             <img src="images/logo.jpg" alt="Ma photo"/>
             <div>
-                <p>Je suis actuellement en formation de développeur web et mobile à l'IUT d'Orléans.</p>
-                <p>J'ai développé des applications web et mobile pour des entreprises depuis 2018.</p>
-                <p>Mes compétences incluent le développement web, le développement mobile, la conception d'interfaces utilisateurs, le marketing digital et la stratégie digitale.</p>
-                <p>Je suis disponible pour échanger sur mes expériences et mes projets.</p>
+                <p>Je suis Anabelle Josée Kouamé et j'ai obtenu une licence en économie. Aujourd'hui, je me lance dans une reconversion en développement web, une passion qui est devenue une véritable ambition.</p><br/>
+                <p>J'ai toujours été fascinée par le tourisme et le potentiel qu'il représente pour mon pays. Mon objectif est donc d'acquérir les compétences nécessaires pour concevoir des sites web dédiés au tourisme, qui mettront en valeur les richesses culturelles et naturelles de mon pays.</p><br/>
+                <p>Pour apprendre le développement web, je me forme activement sur des plateformes comme FreeCodeCamp et YouTube, où j'explore les bases du HTML, CSS et JavaScript. Mais au-delà de la théorie, je cherche à pratiquer davantage.</p> <br/>
+            
             </div>
         </section>
 
@@ -42,9 +42,13 @@
             <h2>Passions</h2>
             <img src="images/passion.jpg" alt="Ma photo"/>
             <ul>
-                <li>Développement web et mobile</li>
-                <li>Conception d'UI/UX</li>
-                <li>Stratégie digitale et marketing</li>
+                <ol>La lecture</ol>
+                <p>Depuis toujours, j'aime la lecture, que ce soit des romans, des articles ou des contenus spécialisés. Lire me permet d'apprendre, de m'inspirer et d'explorer de nouvelles idées. </p><br/>
+                <ol>Le tourisme et la découverte du web</ol>
+                <p>j'aime parcourir différents sites web dédiés aux voyages, aux découvertes culturelles et aux destinations à travers le monde. J'observe leur design, leurs fonctionnalités et la manière dont ils mettent en avant les lieux et les expériences. Cela me donne des idées pour créer à mon tour des plateformes modernes et attrayantes dédiées au tourisme dans mon pays.</p><br/>
+                <ol>Le développement web et la technologie</ol>
+                <p>Au fil du temps, j'ai développé un intérêt pour le numérique et le développement web. Ce qui me fascine c'est le fait créer quelque chose de zéro de voir un site prendre forme avec quelque des lignes de code.</p>
+                
             </ul>
         </section>
 
